--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
         </div>
     </div>
 
+    <div id="welcomeImage" class="welcome-image">
+        <img src="besito" alt="Besito">
+    </div>
+
     <script src="app.js"></script>
 </body>
 </html>
