Fix image path with correct extension

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
 
     <div id="welcomeImage" class="welcome-image">
-        <img src="besito" alt="Besito">
+        <img src="besito.png" alt="Besito">
     </div>
 
     <script src="app.js"></script>
