Convert project list to dropdown on mobile

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
                 <h2>Proyectos</h2>
                 <button id="addProjectBtn" class="btn btn-primary">+</button>
             </div>
+            <select id="mobileProjectSelect" class="mobile-project-select">
+                <option value="">Selecciona un proyecto...</option>
+            </select>
             <ul id="projectList" class="project-list"></ul>
             <div class="sidebar-footer">
                 <button id="exportBtn" class="btn btn-secondary">Exportar</button>
